--- a/kiwiplan-console-app.csproj
+++ b/kiwiplan-console-app.csproj
@@ -8,4 +8,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
+  </ItemGroup>
 </Project>
